# SolarSwarmNetworks

./: Additional_Info.md  GeteilteNetzwerke.md  ProjektÜberblick.md  README.md  ROS_Key Expiration.md  batman-adv_setup1.bash  batman-adv_setup2.bash  docker_swarm.md  first_package_doc.md  mock_robot_doc.md  service_package_doc.md
Dokumentation/: Dokumentation zur Einrichtung.md  Einarbeitung_Docker_Swarm.md  Einarbeitung_Geteilte_Netzwerke_und_BATMAN.md  Einarbeitung_geteilte_Netzwerke_und_BATMAN.md  TechnischeDokumentation2.md  custom_interfaces_class diagram_prompt.txt  data_sink_class diagram_prompt.txt  first_package_doc.md  launch_files.md  mock_robot_class diagram_prompt.txt  mock_robot_doc.md
Dokumentation_neu/: Dokumentation zur Einrichtung.md  Einarbeitung_Geteilte_Netzwerke_und_BATMAN.md  Namespaces_NetzwerkeROS2.md  Struktur_Foliensatz.txt  activity_diagram-docker_init.txt  activity_diagram-docker_leader.txt
Dokumentation_old/: mock_robot_doc.md
Planung/: Lastenheft.md  Pflichtenheft.md  to-do.md
Robin/: Ad-hoc.txt  AdHocTest_Raspberry  Dockerfile  Notizen_PI-Docker_PublisherUndSubscriber.md  ProjektÜberblick.md  ROS2-Konzepte.md  start_mesh.sh  start_mesh_2.sh  start_mesh_3.sh  start_mesh_4.sh  turtlesim_publisher.py  velocity_subscriber.py
StorageNils/: Testdiagram.md
Visualisation/: readme.md
batman-adv/: batman-adv_setup1.bash
ros2_packages_src/: Testen mit pytest.md  (+2 more)
ros2_packages_src/mock_robot/: package.xml  setup.py
ros2_packages_src/mock_robot/mock_robot/: fibonacci.py  get_service_server_mac.py  int_avg.py  int_rng.py  mock_data.py  mock_position.py  robot_util.py
ros2_packages_src/mock_robot/mock_robot/util/: robot_util.py  time_util.py
ros2_packages_src/mock_robot/test/: test_robot_util.py
solarswarm_run/backend/_ros_ws/install/turtle_subscriber/share/turtle_subscriber/: package.dsv  package.xml
(+305 files in other folders)
