<?xml version="1.1"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mock_robot</name>
  <version>0.10.1</version>
  <description>This package implements a mock robot which publishes mock data about itself.</description>
  <maintainer email="vincent.welsch@stud.hs-bochum.de">Vincent Welsch</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <!-- <exec_depend>example_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
