<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_subscriber</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christopher.bluemer@stud.hs-bochum.de">root</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>python3-sqlalchemy</exec_depend>
  <exec_depend>python3-psycopg2</exec_depend>
  <exec_depend>python3-dateutil</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
